# project-prompt

./: -files --others --exclude-standard  .coveragerc  .coveragerc.focused  .coveragerc.new  .env.example  .gitignore  ANALISIS_COMPARATIVO_REFACTORIZACION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTX_ERROR_RESOLUTION.md  ENHANCED_FREE_DASHBOARD_RESULTS.md  ENHANCED_RULES_COMPLETE.md  FASE2_IMPLEMENTATION_SUMMARY.md  FINAL_RELEASE_STATUS.md  Fase1.md  IMPLEMENTATION_STATUS.py  INSTALLATION_TEST.md  INSTALLATION_TROUBLESHOOTING.md  MANIFEST.in  PHASE4_COMPLETE.md  PHASE_2_TASK_2.2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_ENHANCED_COMPLETION.md  PHASE_3_FINAL_SUCCESS.md  PROJECT_ANALYSIS_AND_REFACTORING_PLAN.md  PYPI_UPLOAD_COMPLETION.md  README.md  RECOVERY_REPORT.md  RELEASE_COMPLETED.md  RELEASE_SUCCESS.md  ROADMAP.md  SECURITY.md  STRUCTURED_RULES_INTEGRATION_COMPLETE.md  STRUCTURED_RULES_QUICKSTART.md  TESTING_FRAMEWORK_COMPLETION_REPORT.md  ULTIMATE_COMPLETION_SUCCESS.md  __init__.py  (+133 more)
.github/: CI-README.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-fixed.yml  ci-improved.yml  ci-simple.yml  ci.yml  manual_release.yml  pypi-publish.yml  release.yml  verify-anthropic.yml
config/: api_monitoring.yaml  api_strategies.yaml  prompt_templates.yaml
dist_new/: projectprompt-1.0.1-py3-none-any.whl
docs/: API_VERIFICATION_GUIDE.md  COMMAND_MINDMAP.md  README.md  comprehensive_testing_guide.md  coverage_improvement_plan.md  freemium_system_verification_guide.md  implementacion_actual.md  pypi_token_setup.md  release_checklist.md  script_reference.md  test_report_template.md
docs/api/: README.md
docs/guides/: user_guide.md  (+3 more)
examples/: README.md  demo_enhanced_prompts.py  simple_premium_demo.py
examples/projects/weather-api/: .env.example  README.md  pyproject.toml  requirements.txt
examples/projects/weather-api/src/: api_client.py  config.py  utils.py
fases/: fase2.md  fase2_progress.md  fase3.md  fase3_progress.md  fase4_progress.md  fase5_progress.md  fase6_progress.md  start.md
project-output/: README.md  project-config.json
project-prompt-output/: groups.json
scripts/: api_monitor.py  build.py  commit_fase6_tarea6.3.sh  commit_fase6_tarea6.4.sh  commit_fase6_task7.sh  fix_bugs.py  optimize_performance.py  project-prompt.sh  restructure_project.sh  run_tests.py  setup_environment.bat  setup_environment.sh  test_apis.py  test_implementation_prompt.py  test_package.py  validate_release.py
src/: __init__.py  cli.py  factory.py  main.py  main.py.bak  main.py.bak.original
src_new/: cli.py
test-analysis/: analysis.json
test-cli/: analysis.json
test-output/: analysis.json
test-project/: .gitignore  README.md  setup.py
test-results-20250601-181436/: diagnose_output.txt  diagnose_result.json  help_analyze_error.txt  help_analyze_result.json  help_config_error.txt  help_config_result.json  help_general_output.txt  help_general_result.json  test_report.md  version_output.txt  version_result.json
test-small/: analysis.json
test-small-output/: analysis.json
tests/: __init__.py  conftest.py  enhanced_test_projectprompt.sh  run_anthropic_verification.sh  run_complete_test.sh  run_freemium_tests.sh  test_adaptive_system.py  test_ai_integrations.py  test_analyzers.py  test_api_validator.py  test_basic.py  test_cli.py  test_config.py  test_connection_analyzer.py  test_contextual_prompt_generator.py  test_core_functionality.py  test_dashboard.py  test_directory_structure.py  test_documentation_navigator.py  test_functionality_detector.py  test_logger.py  test_logging_config.py  test_markdown_generator.py  test_performance.py  test_phase3_critical_fixes.py  test_project_structure.py  test_rules_manager.py  test_rules_validator.py  test_success_metrics.py  test_sync_manager.py  test_ui.py  test_updater.py
vscode-extension/: .vscodeignore  LICENSE.md  README.md  extension.js  package-lock.json  package.json  webpack.config.js
(+246 files in other folders)
