[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectprompt"
version = "2.0.0"
description = "AI-powered project analysis and improvement suggestions"
authors = [{name = "ProjectPrompt"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "click>=8.0.0", 
    "python-dotenv>=0.19.0",
    "pathspec>=0.10.0",
    "typing-extensions>=4.0.0"
]
keywords = ["ai", "code-analysis", "project-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
projectprompt = "main:main"
