[metadata]
name = project-prompt
version = attr: src.__version__
description = Asistente inteligente para análisis y documentación de proyectos usando IA
long_description = file: README.md
long_description_content_type = text/markdown
author = ProjectPrompt Team
author_email = daniel@lagowski.es
license = MIT
license_files = LICENSE
url = https://github.com/Dixter999/project-prompt
project_urls =
    Bug Tracker = https://github.com/Dixter999/project-prompt/issues
    Documentation =https://github.com/Dixter999/project-prompt?tab=readme-ov-file#readme
    Source Code = https://github.com/Dixter999/project-prompt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    typer>=0.9.0
    rich>=13.5.0
    openai>=1.0.0
    anthropic>=0.5.0
    pyyaml>=6.0.1
    python-frontmatter>=1.0.0
    jinja2>=3.0.0
    tabulate>=0.9.0
    requests>=2.28.0

[options.entry_points]
console_scripts =
    project-prompt = src.main:app

[options.packages.find]
exclude =
    tests
    tests.*
    test_project
    test_project.*

[bdist_wheel]
universal = 0
